# cubnm

./: .dockerignore  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  bnm.cpp  bnm.cu  build.sh  build_many.sh  check_fit.cpp  constants.cpp  constants.h  constants.hpp  fic.cpp  fic.hpp  helpers.cpp  pyproject.toml  requirements.txt  run_simulations.cpp  setup.py  test.py
.github/workflows/: build.yml  cibw.yml
codegen/: generate_models.py  model_specs.py  requirements.txt
codegen/recipes/: jr.yaml  kuramoto.yaml  rjr.yaml  rww.yaml  rwwex.yaml  wc.yaml
cuBNM/: optimize.py  sim.py  utils.py
cuBNM/cpp/: bnm.cpp  constants.cpp  constants.hpp  helpers.cpp  helpers.hpp  run_simulations.cpp
cuBNM/cuda/: bnm.cu
docker/development/: Dockerfile
docker/stable/: Dockerfile
docker/v0.0.2/: Dockerfile
docs/: cli.rst  conf.py  contribution.rst  index.rst  install.rst  models.rst  models.rst.mako  overview.rst  quickstart.rst  requirements.txt  tutorials.rst
docs/_autoapi_templates/python/: module.rst
docs/_static/css/: custom.css
docs/tutorials/: batch_optimize.ipynb  cmaes_het.ipynb  cmaes_homo.ipynb  cmaes_yeo.ipynb  grid_search.ipynb  requirements.txt
examples/: cli_examples.sh  examples.py
include/cubnm/: bnm.cuh  bnm.hpp  cuda_to_hip.h  defines.h  fc.cuh  fc.hpp  includes.cuh  utils.cuh  utils.hpp
include/cubnm/models/: base.cuh  base.hpp  boilerplate.hpp  bw.cuh  bw.hpp  jr.cuh  jr.hpp  kuramoto.cuh  kuramoto.hpp  model.cuh.mako  model.hpp.mako  rjr.cuh  rjr.hpp  rww.cuh  rww.hpp  rww_fic.hpp  rwwex.cuh  rwwex.hpp  wc.cuh  wc.hpp
sample_input/: SC.txt  ctx_parc-aparc_approach-median_mean001_desc-length.txt  ctx_parc-schaefer-100_approach-median_mean001_desc-length.txt  ctx_parc-schaefer-100_approach-median_mean001_desc-strength.txt  ctx_parc-schaefer-100_desc-6maps_minmax.txt  ctx_parc-schaefer-100_hemi-LR_exc-inter_desc-FCtril.txt  ctx_parc-schaefer-200_approach-median_mean001_desc-length.txt  ctx_parc-schaefer-200_approach-median_mean001_desc-strength.txt  ctx_parc-schaefer-400_approach-median_mean001_desc-length.txt  ctx_parc-schaefer-400_approach-median_mean001_desc-strength.txt
src/cpp/: bnm.cpp  constants.cpp  constants.hpp  core.cpp  fic.cpp  run_simulations.cpp  utils.cpp  utils.hpp
src/cuBNM/: __init__.py  _core.py  _run_simulations.py  datasets.py  optimize.py  sim.py  utils.py
src/cuBNM/data/: ctx_parc-schaefer-100_desc-2maps_zscore.txt  ctx_parc-schaefer-100_desc-6maps_zscore.txt  ctx_parc-schaefer-100_hemi-LR_desc-FCtril.txt
src/cubnm/: __init__.py  _core.py  _version.py  cli.py  cli_parser.py  datasets.py  optimize.py  sim.py  utils.py
src/cubnm/data/: ctx_parc-aparc_approach-median_mean001_desc-strength.txt  ctx_parc-schaefer-100_desc-2maps_minmax.txt  ctx_parc-schaefer-100_desc-bold.txt  ctx_parc-schaefer-100_hemi-LR_desc-FCDtril.txt  ctx_parc-schaefer-100_hemi-LR_exc-inter_desc-FCDtril.txt
src/cubnm/data/maps/: ctx_parc-schaefer-100_desc-fcgradient01_zscore.txt  ctx_parc-schaefer-100_desc-gabaa_zscore.txt  ctx_parc-schaefer-100_desc-genepc1_zscore.txt  ctx_parc-schaefer-100_desc-myelinmap_zscore.txt  ctx_parc-schaefer-100_desc-nmda_zscore.txt  ctx_parc-schaefer-100_desc-thickness_zscore.txt  ctx_parc-schaefer-100_desc-yeo7.txt
src/cubnm/data/micamics/bold/: sub-HC001_ses-01_space-fsnative_atlas-aparc_desc-bold.npz  sub-HC001_ses-01_space-fsnative_atlas-glasser360_desc-bold.npz  sub-HC001_ses-01_space-fsnative_atlas-schaefer1000_desc-bold.npz  sub-HC001_ses-01_space-fsnative_atlas-schaefer100_desc-bold.npz  sub-HC001_ses-01_space-fsnative_atlas-schaefer200_desc-bold.npz  sub-HC001_ses-01_space-fsnative_atlas-schaefer300_desc-bold.npz  sub-HC001_ses-01_space-fsnative_atlas-schaefer400_desc-bold.npz  sub-HC001_ses-01_space-fsnative_atlas-schaefer500_desc-bold.npz  sub-HC001_ses-01_space-fsnative_atlas-schaefer600_desc-bold.npz  sub-HC001_ses-01_space-fsnative_atlas-schaefer700_desc-bold.npz  sub-HC001_ses-01_space-fsnative_atlas-schaefer800_desc-bold.npz  sub-HC001_ses-01_space-fsnative_atlas-schaefer900_desc-bold.npz
src/cubnm/data/micamics/sc/: sub-HC001_ses-01_space-dwinative_atlas-aparc_desc-length.npz  (+22 more)
src/cubnm/optimize/: __init__.py  base.py  grid.py  nevergrad.py  pymoo.py
src/cubnm/sim/: __init__.py  __init__.py.mako  base.py  jr.py  kuramoto.py  rjr.py  rww.py  rwwex.py  simgroup.py.mako  wc.py
src/cuda/: bnm.cu
src/ext/: bnm.cpp  bnm.cu  core.cpp  fc.cpp  fc.cu  models.cpp  models.cpp.mako  models.cu  models.cu.mako  utils.cpp  utils.cu
src/ext/models/: base.cpp  bw.cpp  bw.cu  jr.cpp  jr.cu  kuramoto.cpp  kuramoto.cu  model.cpp.mako  model.cu.mako  rjr.cpp  rjr.cu  rww.cpp  rww.cu  rww_fic.cpp  rwwex.cpp  rwwex.cu  wc.cpp  wc.cu
test/: test.py
tests/: test_core.py
tests/expected/optimize/: Bayes.csv  CMAES.csv  Grid.csv  NSGA2.csv
tests/optimize/: gen_expected.py  test.py
tests/sim/: gen_expected.py  test.py  test_Kuramoto.py  test_rWW.py  test_rWWEx.py
tests/utils/: test.py
tools/: build_wheels.sh  cibw_before_all.sh
(+20 files in other folders)
