[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "numpy>=1.20",
    "GPUtil==1.4",
]

[project]
name = "cuBNM"
version = "0.0.2-alpha"
license = {file = "LICENSE"}
dependencies = [
    "numpy>=1.20",
    "GPUtil==1.4",
    "scipy",
    "pandas",
    "pymoo==0.6",
    "scikit-optimize==0.9",
]
requires-python = ">=3.7"
description = "A toolbox for biophysical network modeling on GPUs "
readme = "README.md"
authors = [
    {name = "Amin Saberi", email="amnsbr@gmail.com"}
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: C',
    'Programming Language :: C++',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Operating System :: Unix',
    'Environment :: GPU :: NVIDIA CUDA',
    'Topic :: Scientific/Engineering',
]

[tool.setuptools]
include-package-data = true

[tool.cibuildwheel]
before-all = "bash {project}/tools/cibw_before_all.sh {project}"
# update path to the location of gcc-10 and nvcc
# it is important to add gcc-10 to the beginning to override gcc-12
# and important to put miniconda at the end (not to override cibw's Python)
# reason for downgrade is to solve this offending symbol (with manylinux_2_28):
# libstdc++.so.6  offending symbols: _ZSt28__throw_bad_array_new_lengthv@GLIBCXX_3.4.29
# environment = { PATH="/opt/rh/gcc-toolset-10/root/usr/bin:$PATH:/root/miniconda/bin" }
# Update: will not use gcc-10
environment = { PATH="$PATH:/root/miniconda/bin" }
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
build-verbosity = 3 # temporary
skip = ["pp*", "*-manylinux_i686", "*musllinux*"]
build = ["*-manylinux_x86_64"]